debugged swagger and added tests to test the routes locally
