# routes/index.js
@@ -7,11 +7,12 @@ const shipsRoutes = require('./shipsRoutes');
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
+  //#swagger.tags=['Hello World']
   res.send('hello world');
 });
 
 router.use('/pilots', pilotRoutes);
 
-router.use('ships', shipsRoutes);
+router.use('/ships', shipsRoutes);
 
 module.exports = router;
