# routes/shipsRoutes.js
@@ -4,17 +4,17 @@ const shipsController = require('../controllers/shipsController');
 const { handleErrors } = require('../utilities');
 
 // This route will retrieve all the ships of the rebel alliance
-router.get('/', handleErrors(shipsController.getAllShips));
+router.get('/', shipsController.getAllShips);
 
 // This route will retrieve the information of one ship of the rebel alliance based on the id
-router.get('/:id', handleErrors(shipsController.getShip));
+router.get('/:id', shipsController.getShip);
 
 // This route will add a new ship for the rebel alliance
 router.post(
   '/',
   // shipRules(),
   // validateShip,
-  handleErrors(shipsController.addNewShip)
+  shipsController.addNewShip
 );
 
 // This route will modify the specifications of a ship in the rebel alliance
@@ -22,10 +22,10 @@ router.put(
   '/:id',
   // shipRules(),
   // validateShip,
-  handleErrors(shipsController.updateShip)
+  shipsController.updateShip
 );
 
 // This route will delete a ship of the rebel alliance
-router.delete('/:id', handleErrors(shipsController.deleteShip));
+router.delete('/:id', shipsController.deleteShip);
 
 module.exports = router;
